--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
-  /* background-color: aliceblue; */
-  background-image: url(https://img.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg?w=1380&t=st=1669741229~exp=1669741829~hmac=31f7dff0ebe0d8d1e0abe0e7a4f48454910b92ce147a8283aca81c5029be3a5d);
+  background-color: black;
+  /* background-image: url(https://img.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg?w=1380&t=st=1669741229~exp=1669741829~hmac=31f7dff0ebe0d8d1e0abe0e7a4f48454910b92ce147a8283aca81c5029be3a5d); */
 }
 .form-css {
   width: 100%;
@@ -11,16 +11,21 @@
   background-color: white;
 }
 .font-css{
-  font-family: 'Times New Roman', Times, serif;
+  /* font-family: 'Times New Roman', Times, serif; */
   text-align: center;
   font-weight: bold;
   background-color: black;
   color: white;
   margin-bottom: 1rem;
+  border-radius: 10px;
+  padding: 5px;
 }
 .error-color {
   color: red;
 }
 .form-label {
   font-weight: bold;
+}
+.table-css{
+  margin-top: 3.5rem;
 }
