--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  background-color: black;
+  background-color: rgba(0, 0, 0, 0.432);
   /* background-image: url(https://img.freepik.com/free-photo/abstract-grunge-decorative-relief-navy-blue-stucco-wall-texture-wide-angle-rough-colored-background_1258-28311.jpg?w=1380&t=st=1669741229~exp=1669741829~hmac=31f7dff0ebe0d8d1e0abe0e7a4f48454910b92ce147a8283aca81c5029be3a5d); */
 }
 .form-css {
@@ -28,4 +28,5 @@
 }
 .table-css{
   margin-top: 3.5rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
