css added for heading

--- a/src/App.css
+++ b/src/App.css
@@ -4,9 +4,11 @@
 }
 .form-css {
   width: 100%;
-  margin: 3.3rem 0rem;
+  /* margin: 3.3rem 0rem; */
+  margin-bottom: 7rem;
+  margin-top: 0%;
   padding: 30px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   background-color: white;
 }
@@ -16,9 +18,10 @@
   font-weight: bold;
   background-color: black;
   color: white;
-  margin-bottom: 1rem;
-  border-radius: 10px;
-  padding: 5px;
+  margin-bottom: 0%;
+  margin-top: 2rem;
+  /* border-radius: 10px; */
+  padding: 15px 0px;
 }
 .error-color {
   color: red;
@@ -29,4 +32,6 @@
 .table-css{
   margin-top: 3.5rem;
   box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  /* border-top-left-radius: 10px;
+  border-top-right-radius: 10px; */
 }
